@@ -216,6 +216,7 @@ typedef enum
    | IPMICONSOLE_WORKAROUND_SUN_2_0_SESSION                 \
    | IPMICONSOLE_WORKAROUND_OPEN_SESSION_PRIVILEGE          \
    | IPMICONSOLE_WORKAROUND_NON_EMPTY_INTEGRITY_CHECK_VALUE \
+   | IPMICONSOLE_WORKAROUND_NO_CHECKSUM_CHECK               \
    | IPMICONSOLE_WORKAROUND_IGNORE_SOL_PAYLOAD_SIZE         \
    | IPMICONSOLE_WORKAROUND_IGNORE_SOL_PORT                 \
    | IPMICONSOLE_WORKAROUND_SKIP_SOL_ACTIVATION_STATUS)
