@@ -8,3 +8,15 @@ hitting this issue may see "username invalid", "authentication type
 unavailable for attempted privilege level", or "k_g invalid" errors.
 Issue observed on Asus P5M2/P5MT-R/RS162-E4/RX4, Intel SR1520ML/X38ML,
 and Sun Fire 2200/4150/4450 with ELOM.
+.LP
+\fnochecksumcheck\fR - This workaround flag will tell FreeIPMI to not
+check the checksums returned from IPMI command responses.  It works
+around systems that return invalid checksums due to implementation
+errors, but the packet is otherwise valid.  Users are cautioned on the
+use of this option, as it removes validation of packet integrity in a
+number of circumstances.  However, it is unlikely to be an issue in
+most situations.  Those hitting this issue may see "connection
+timeout", "session timeout", or "password verification timeout"
+errors.  On IPMI 1.5 connections, the "noauthcodecheck" workaround may
+also needed too.  Issue observed on Supermicro X9SCM-iiF and
+Supermicro X9DRi-F.
